--- a/app/src/main/res/layout/ad_card.xml
+++ b/app/src/main/res/layout/ad_card.xml
@@ -133,6 +133,7 @@
                 android:backgroundTint="@color/rust_300"
                 android:textColor="@color/gray_900"
                 android:textSize="14sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ad_body"
                 app:layout_constraintEnd_toEndOf="parent"
