migration to material 3 is complete - new libraries and components are now used - removed a whole lot of unused code - made a variety of adjustments to accommodate material 3

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MedianMeeple" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.MedianMeeple" parent="Theme.Material3.DayNight">
         <item name="android:fontFamily">@font/dmsans_regular</item>
         <item name="fontFamily">@font/dmsans_regular</item>
         <item name="android:textViewStyle">@style/MedianMeeple.TextView</item>
