--- a/app/src/main/res/layout/large_image_ad.xml
+++ b/app/src/main/res/layout/large_image_ad.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:minHeight="120dp"
             android:minWidth="120dp"
+            app:layout_constraintVertical_chainStyle="spread_inside"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/ad_app_icon"
             app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +25,8 @@
 
         <ImageView
             android:id="@+id/ad_app_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="16dp"
@@ -52,29 +53,16 @@
             app:layout_constraintEnd_toStartOf="@id/ad_cta_button"
             tools:text="Test Ad : Google Ads" />
 
-        <RatingBar
-            android:id="@+id/ad_stars"
-            style="?android:attr/ratingBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:isIndicator="true"
-            android:numStars="5"
-            android:stepSize="0.5"
-            app:layout_constraintStart_toStartOf="@id/ad_headline"
-            app:layout_constraintTop_toBottomOf="@id/ad_headline"
-            app:layout_constraintBottom_toBottomOf="@id/ad_app_icon"
-            tools:rating="4.5" />
-
         <TextView
             android:id="@+id/ad_tag"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:background="@drawable/circle_shape"
-            android:paddingHorizontal="6dp"
-            android:paddingVertical="2dp"
+            android:background="@drawable/ad_indicator_background"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
             android:text="@string/ad_indicator"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -85,9 +73,11 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/ad_cta_button"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="12dp"
+            app:layout_constraintVertical_bias="1"
+            android:minHeight="48dp"
             android:textAllCaps="false"
             app:cornerRadius="100dp"
             app:layout_constraintTop_toBottomOf="@id/ad_image"
