--- a/app/src/main/res/layout/small_image_ad.xml
+++ b/app/src/main/res/layout/small_image_ad.xml
@@ -41,7 +41,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:ellipsize="end"
-            android:maxLines="2"
+            android:maxLines="3"
             android:minWidth="100dp"
             android:textSize="14sp"
             android:textStyle="bold"
@@ -53,14 +53,14 @@
 
         <TextView
             android:id="@+id/ad_tag"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:background="@drawable/circle_shape"
-            android:paddingHorizontal="4dp"
-            android:paddingVertical="2dp"
+            android:background="@drawable/ad_indicator_background"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
             android:text="@string/ad_indicator"
             android:textSize="10sp"
             android:textStyle="bold"
@@ -71,9 +71,10 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/ad_cta_button"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="12dp"
+            android:minHeight="48dp"
             android:textAllCaps="false"
             app:cornerRadius="100dp"
             app:layout_constraintStart_toStartOf="parent"
