putting on the finishing touches!

--- a/app/src/main/res/layout/small_image_ad.xml
+++ b/app/src/main/res/layout/small_image_ad.xml
@@ -14,8 +14,7 @@
         <com.google.android.gms.ads.nativead.MediaView
             android:id="@+id/ad_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minHeight="120dp"
+            android:layout_height="120dp"
             android:minWidth="120dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/ad_app_icon"
