--- a/app/src/main/res/layout/large_image_ad.xml
+++ b/app/src/main/res/layout/large_image_ad.xml
@@ -14,8 +14,7 @@
         <com.google.android.gms.ads.nativead.MediaView
             android:id="@+id/ad_image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:minHeight="120dp"
+            android:layout_height="220dp"
             android:minWidth="120dp"
             app:layout_constraintVertical_chainStyle="spread_inside"
             app:layout_constraintTop_toTopOf="parent"
